Swagger ui update
